dark mode docs fixes
- change navbar image prefix from app-header to navbar for consistency
- add description to 404 page
- update package-lock.json
- hide color specs for dark mode where they don't match
- fix dark mode messages color

--- a/assets/styles/_anatomy-css.scss
+++ b/assets/styles/_anatomy-css.scss
@@ -43,7 +43,6 @@
 
     .hover-padding-text {
       color: #e06cd2;
-      background: rgba(255, 255, 255, 0.65);
       position: absolute;
       font-size: 11px;
       font-weight: 700;
