--- a/assets/styles/_theme-dark.scss
+++ b/assets/styles/_theme-dark.scss
@@ -79,4 +79,14 @@
   .theme-l {
     display: none !important;
   }
+
+  .message-primary {
+    background-color: rgba(1,154,235,.2) !important;
+    color: #f1f1f6 !important;
+  }
+
+  .message-secondary {
+    background-color: rgba(106,110,121,.2) !important;
+    color: #f1f1f6 !important;
+  }
 }
